day-10/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: giropops-senhas
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-prod

    # This line sets the cluster issuer for the ingress to "letsencrypt-prod".
    # To use the staging cluster issuer, change it to "letsencrypt-staging".
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - giropops.containers.expert
      secretName: giropops-senhas-tls
  rules:
    - host: giropops.containers.expert
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: giropops-senhas
                port:
                  number: 5000
